syntax = "proto3";
package heimdallv2.types;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";

option go_package = "github.com/0xPolygon/heimdall-v2/types";

// DividendAccount contains the burned fees
message DividendAccount {
  option (gogoproto.equal) = true;
  string user = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (amino.dont_omitempty) = true
  ];
  string fee_amount = 2 [ (amino.dont_omitempty) = true ];
}
